--- a/src/main/resources/templates/hash_result.html
+++ b/src/main/resources/templates/hash_result.html
@@ -11,19 +11,19 @@
     <table>
         <tbody>
         <tr>
-            <td> Hash:</td>
+            <td> Hash</td>
             <td th:text="${result}"></td>
         </tr>
         <tr>
-            <td> p:</td>
+            <td> p</td>
             <td th:text="${hash.p}"></td>
         </tr>
         <tr>
-            <td> q:</td>
+            <td> q</td>
             <td th:text="${hash.q}"></td>
         </tr>
         <tr>
-            <td> n:</td>
+            <td> n</td>
             <td th:text="${hash.h0}"></td>
         </tr>
         </tbody>
