--- a/src/main/resources/templates/rsa_result.html
+++ b/src/main/resources/templates/rsa_result.html
@@ -15,27 +15,27 @@
             <td th:text="${result}"></td>
         </tr>
         <tr>
-            <td> p:</td>
+            <td> p</td>
             <td th:text="${rsa.p}"></td>
         </tr>
         <tr>
-            <td> q:</td>
+            <td> q</td>
             <td th:text="${rsa.q}"></td>
         </tr>
         <tr>
-            <td> n:</td>
+            <td> n</td>
             <td th:text="${rsa.n}"></td>
         </tr>
         <tr>
-            <td> phi:</td>
+            <td> phi</td>
             <td th:text="${rsa.phi}"></td>
         </tr>
         <tr>
-            <td> e:</td>
+            <td> e</td>
             <td th:text="${rsa.e}"></td>
         </tr>
         <tr>
-            <td> d:</td>
+            <td> d</td>
             <td th:text="${rsa.d}"></td>
         </tr>
         </tbody>
