--- a/src/main/resources/static/css/rsa.css
+++ b/src/main/resources/static/css/rsa.css
@@ -17,7 +17,7 @@ html {
 
 #result table{
     border: 1px solid #eee;
-    table-layout: fixed;
+    table-layout: auto;
     width: 100%;
     margin-bottom: 20px;
 }
