--- a/src/main/resources/templates/hash.html
+++ b/src/main/resources/templates/hash.html
@@ -7,6 +7,7 @@
     <link href="../static/css/cipher.css" th:href="@{/css/cipher.css}" rel="stylesheet" />
 </head>
 <body>
+<h1>Функция хэширования</h1>
 <div id="encryption_form">
     <form method="post" th:action="@{/hash}" th:object="${pqForm}">
         <input id="p" placeholder="p" required type="text" th:field="*{p}"/>
